tdf#144362 doc/x export: different columns mean new section

The situation causing this may have become more likely in 7.4.0.
I think that tdf#149313 might have caused a regression in the
unit test that I found that exhibited the problem,
so I am adding another one.

make CppunitTest_sw_ooxmlexport9 CPPUNIT_TEST_NAME=testTdf97648_relativeWidth
make CppunitTest_sw_ooxmlexport9 CPPUNIT_TEST_NAME=testTdf144362

Change-Id: I8e668ac7bfb01a8704634a3e16243be7298bd1ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151731
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>